--- a/bbf_ombi_in_organizr.css
+++ b/bbf_ombi_in_organizr.css
@@ -426,6 +426,23 @@ settings-menu hr {
 	width: 100% !important;
 }
 
+/* Scroll Bar Fixes */
+html {
+    height: 100%;
+    overflow: hidden;
+}
+body {
+    height: 100%;
+    overflow-y: scroll;
+    box-sizing: content-box;
+    top: 45px;
+    position: relative;
+}
+.top-spacing{
+    padding-top: 25px !important;
+    padding-bottom: 45px;
+}
+
 /* BBF in Organizr customizations start here */
 
 .navbar-brand{
